--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,31 @@
 @import-normalize; /* bring in normalize.css styles */
 
+@font-face {
+  font-family: 'ManropeRegular';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./fonts/Manrope-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'ManropeMedium';
+  font-style: normal;
+  font-weight: 500;
+  src: url('./fonts/Manrope-Medium.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'ManropSemiBold';
+  font-style: normal;
+  font-weight: 600;
+  src: url('./fonts/Manrope-SemiBold.ttf') format('truetype');
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'ManropeMedium', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -12,4 +33,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+p {
+  margin: 0;
 }
